﻿Added error log to AppData folder to assist with troubleshooting.
Title bar and command prompt information is configurable now.
Fixed error reading filenames containing "$" character.
Several minor improvements.