@@ -50,6 +50,7 @@ Partial Class SettingsForm
         Me.btnLeaderboardSql = New System.Windows.Forms.Button()
         Me.Tabs = New System.Windows.Forms.TabControl()
         Me.tabGeneral = New System.Windows.Forms.TabPage()
+        Me.chkShowProjectNameInCommandPrompt = New System.Windows.Forms.CheckBox()
         Me.chkShowProjectDirectoryInTitleBar = New System.Windows.Forms.CheckBox()
         Me.chkShowProjectNameInTitleBar = New System.Windows.Forms.CheckBox()
         Me.GroupBox1 = New System.Windows.Forms.GroupBox()
@@ -79,7 +80,7 @@ Partial Class SettingsForm
         Me.txtEzSchema = New System.Windows.Forms.TextBox()
         Me.TextBox1 = New System.Windows.Forms.TextBox()
         Me.chkEnableEzObjects = New System.Windows.Forms.CheckBox()
-        Me.chkShowProjectNameInCommandPrompt = New System.Windows.Forms.CheckBox()
+        Me.chkKeepScreenOn = New System.Windows.Forms.CheckBox()
         CType(Me.updnFolderSaves, System.ComponentModel.ISupportInitialize).BeginInit()
         CType(Me.PictureBox1, System.ComponentModel.ISupportInitialize).BeginInit()
         Me.Tabs.SuspendLayout()
@@ -179,7 +180,7 @@ Partial Class SettingsForm
         'Label3
         '
         Me.Label3.AutoSize = True
-        Me.Label3.Location = New System.Drawing.Point(6, 151)
+        Me.Label3.Location = New System.Drawing.Point(6, 174)
         Me.Label3.Name = "Label3"
         Me.Label3.Size = New System.Drawing.Size(85, 13)
         Me.Label3.TabIndex = 1
@@ -187,7 +188,7 @@ Partial Class SettingsForm
         '
         'updnFolderSaves
         '
-        Me.updnFolderSaves.Location = New System.Drawing.Point(97, 149)
+        Me.updnFolderSaves.Location = New System.Drawing.Point(97, 172)
         Me.updnFolderSaves.Name = "updnFolderSaves"
         Me.updnFolderSaves.Size = New System.Drawing.Size(55, 20)
         Me.updnFolderSaves.TabIndex = 0
@@ -216,7 +217,7 @@ Partial Class SettingsForm
         '
         Me.btnOK.Anchor = CType((System.Windows.Forms.AnchorStyles.Bottom Or System.Windows.Forms.AnchorStyles.Right), System.Windows.Forms.AnchorStyles)
         Me.btnOK.DialogResult = System.Windows.Forms.DialogResult.Cancel
-        Me.btnOK.Location = New System.Drawing.Point(337, 455)
+        Me.btnOK.Location = New System.Drawing.Point(337, 502)
         Me.btnOK.Name = "btnOK"
         Me.btnOK.Size = New System.Drawing.Size(75, 23)
         Me.btnOK.TabIndex = 18
@@ -267,7 +268,7 @@ Partial Class SettingsForm
         'PictureBox1
         '
         Me.PictureBox1.Anchor = CType((System.Windows.Forms.AnchorStyles.Bottom Or System.Windows.Forms.AnchorStyles.Left), System.Windows.Forms.AnchorStyles)
-        Me.PictureBox1.Location = New System.Drawing.Point(12, 454)
+        Me.PictureBox1.Location = New System.Drawing.Point(12, 501)
         Me.PictureBox1.Name = "PictureBox1"
         Me.PictureBox1.Size = New System.Drawing.Size(24, 24)
         Me.PictureBox1.TabIndex = 12
@@ -347,11 +348,12 @@ Partial Class SettingsForm
         Me.Tabs.Location = New System.Drawing.Point(12, 12)
         Me.Tabs.Name = "Tabs"
         Me.Tabs.SelectedIndex = 0
-        Me.Tabs.Size = New System.Drawing.Size(404, 436)
+        Me.Tabs.Size = New System.Drawing.Size(404, 483)
         Me.Tabs.TabIndex = 26
         '
         'tabGeneral
         '
+        Me.tabGeneral.Controls.Add(Me.chkKeepScreenOn)
         Me.tabGeneral.Controls.Add(Me.chkShowProjectNameInCommandPrompt)
         Me.tabGeneral.Controls.Add(Me.chkShowProjectDirectoryInTitleBar)
         Me.tabGeneral.Controls.Add(Me.chkShowProjectNameInTitleBar)
@@ -365,15 +367,25 @@ Partial Class SettingsForm
         Me.tabGeneral.Location = New System.Drawing.Point(4, 22)
         Me.tabGeneral.Name = "tabGeneral"
         Me.tabGeneral.Padding = New System.Windows.Forms.Padding(3)
-        Me.tabGeneral.Size = New System.Drawing.Size(396, 410)
+        Me.tabGeneral.Size = New System.Drawing.Size(396, 457)
         Me.tabGeneral.TabIndex = 0
         Me.tabGeneral.Text = "General"
         Me.tabGeneral.UseVisualStyleBackColor = True
         '
+        'chkShowProjectNameInCommandPrompt
+        '
+        Me.chkShowProjectNameInCommandPrompt.AutoSize = True
+        Me.chkShowProjectNameInCommandPrompt.Location = New System.Drawing.Point(8, 74)
+        Me.chkShowProjectNameInCommandPrompt.Name = "chkShowProjectNameInCommandPrompt"
+        Me.chkShowProjectNameInCommandPrompt.Size = New System.Drawing.Size(255, 17)
+        Me.chkShowProjectNameInCommandPrompt.TabIndex = 20
+        Me.chkShowProjectNameInCommandPrompt.Text = "Display the project name in the command prompt"
+        Me.chkShowProjectNameInCommandPrompt.UseVisualStyleBackColor = True
+        '
         'chkShowProjectDirectoryInTitleBar
         '
         Me.chkShowProjectDirectoryInTitleBar.AutoSize = True
-        Me.chkShowProjectDirectoryInTitleBar.Location = New System.Drawing.Point(8, 120)
+        Me.chkShowProjectDirectoryInTitleBar.Location = New System.Drawing.Point(8, 143)
         Me.chkShowProjectDirectoryInTitleBar.Name = "chkShowProjectDirectoryInTitleBar"
         Me.chkShowProjectDirectoryInTitleBar.Size = New System.Drawing.Size(208, 17)
         Me.chkShowProjectDirectoryInTitleBar.TabIndex = 19
@@ -399,9 +411,9 @@ Partial Class SettingsForm
         Me.GroupBox1.Controls.Add(Me.rbSymbolic)
         Me.GroupBox1.Controls.Add(Me.txtDirExample)
         Me.GroupBox1.Controls.Add(Me.rbFull)
-        Me.GroupBox1.Location = New System.Drawing.Point(3, 188)
+        Me.GroupBox1.Location = New System.Drawing.Point(3, 211)
         Me.GroupBox1.Name = "GroupBox1"
-        Me.GroupBox1.Size = New System.Drawing.Size(381, 216)
+        Me.GroupBox1.Size = New System.Drawing.Size(381, 240)
         Me.GroupBox1.TabIndex = 17
         Me.GroupBox1.TabStop = False
         Me.GroupBox1.Text = "Directory format"
@@ -416,13 +428,13 @@ Partial Class SettingsForm
         Me.txtDirExample.Name = "txtDirExample"
         Me.txtDirExample.ReadOnly = True
         Me.txtDirExample.ScrollBars = System.Windows.Forms.ScrollBars.Vertical
-        Me.txtDirExample.Size = New System.Drawing.Size(369, 168)
+        Me.txtDirExample.Size = New System.Drawing.Size(369, 192)
         Me.txtDirExample.TabIndex = 15
         '
         'Label9
         '
         Me.Label9.AutoSize = True
-        Me.Label9.Location = New System.Drawing.Point(158, 151)
+        Me.Label9.Location = New System.Drawing.Point(158, 174)
         Me.Label9.Name = "Label9"
         Me.Label9.Size = New System.Drawing.Size(73, 13)
         Me.Label9.TabIndex = 16
@@ -438,7 +450,7 @@ Partial Class SettingsForm
         Me.tabOutput.Location = New System.Drawing.Point(4, 22)
         Me.tabOutput.Name = "tabOutput"
         Me.tabOutput.Padding = New System.Windows.Forms.Padding(3)
-        Me.tabOutput.Size = New System.Drawing.Size(371, 460)
+        Me.tabOutput.Size = New System.Drawing.Size(396, 410)
         Me.tabOutput.TabIndex = 1
         Me.tabOutput.Text = "Output"
         Me.tabOutput.UseVisualStyleBackColor = True
@@ -516,7 +528,7 @@ Partial Class SettingsForm
         Me.tabWildcards.Location = New System.Drawing.Point(4, 22)
         Me.tabWildcards.Name = "tabWildcards"
         Me.tabWildcards.Padding = New System.Windows.Forms.Padding(3)
-        Me.tabWildcards.Size = New System.Drawing.Size(371, 460)
+        Me.tabWildcards.Size = New System.Drawing.Size(396, 410)
         Me.tabWildcards.TabIndex = 2
         Me.tabWildcards.Text = "RUNTIME"
         Me.tabWildcards.UseVisualStyleBackColor = True
@@ -558,7 +570,7 @@ Partial Class SettingsForm
         Me.TabPage4.Location = New System.Drawing.Point(4, 22)
         Me.TabPage4.Name = "TabPage4"
         Me.TabPage4.Padding = New System.Windows.Forms.Padding(3)
-        Me.TabPage4.Size = New System.Drawing.Size(371, 460)
+        Me.TabPage4.Size = New System.Drawing.Size(396, 410)
         Me.TabPage4.TabIndex = 3
         Me.TabPage4.Text = "Editor"
         Me.TabPage4.UseVisualStyleBackColor = True
@@ -659,7 +671,7 @@ Partial Class SettingsForm
         Me.tabEasterEgg.Location = New System.Drawing.Point(4, 22)
         Me.tabEasterEgg.Name = "tabEasterEgg"
         Me.tabEasterEgg.Padding = New System.Windows.Forms.Padding(3)
-        Me.tabEasterEgg.Size = New System.Drawing.Size(371, 460)
+        Me.tabEasterEgg.Size = New System.Drawing.Size(396, 410)
         Me.tabEasterEgg.TabIndex = 4
         Me.tabEasterEgg.Text = "Easter Egg"
         Me.tabEasterEgg.UseVisualStyleBackColor = True
@@ -703,22 +715,22 @@ Partial Class SettingsForm
         Me.chkEnableEzObjects.Text = "Script EZ Objects"
         Me.chkEnableEzObjects.UseVisualStyleBackColor = True
         '
-        'chkShowProjectNameInCommandPrompt
+        'chkKeepScreenOn
         '
-        Me.chkShowProjectNameInCommandPrompt.AutoSize = True
-        Me.chkShowProjectNameInCommandPrompt.Location = New System.Drawing.Point(8, 74)
-        Me.chkShowProjectNameInCommandPrompt.Name = "chkShowProjectNameInCommandPrompt"
-        Me.chkShowProjectNameInCommandPrompt.Size = New System.Drawing.Size(255, 17)
-        Me.chkShowProjectNameInCommandPrompt.TabIndex = 20
-        Me.chkShowProjectNameInCommandPrompt.Text = "Display the project name in the command prompt"
-        Me.chkShowProjectNameInCommandPrompt.UseVisualStyleBackColor = True
+        Me.chkKeepScreenOn.AutoSize = True
+        Me.chkKeepScreenOn.Location = New System.Drawing.Point(8, 120)
+        Me.chkKeepScreenOn.Name = "chkKeepScreenOn"
+        Me.chkKeepScreenOn.Size = New System.Drawing.Size(101, 17)
+        Me.chkKeepScreenOn.TabIndex = 21
+        Me.chkKeepScreenOn.Text = "Keep screen on"
+        Me.chkKeepScreenOn.UseVisualStyleBackColor = True
         '
         'SettingsForm
         '
         Me.AutoScaleDimensions = New System.Drawing.SizeF(6.0!, 13.0!)
         Me.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font
         Me.CancelButton = Me.btnOK
-        Me.ClientSize = New System.Drawing.Size(428, 490)
+        Me.ClientSize = New System.Drawing.Size(428, 537)
         Me.Controls.Add(Me.Tabs)
         Me.Controls.Add(Me.PictureBox1)
         Me.Controls.Add(Me.btnOK)
@@ -805,4 +817,5 @@ Partial Class SettingsForm
     Friend WithEvents chkShowProjectDirectoryInTitleBar As Windows.Forms.CheckBox
     Friend WithEvents chkShowProjectNameInTitleBar As Windows.Forms.CheckBox
     Friend WithEvents chkShowProjectNameInCommandPrompt As Windows.Forms.CheckBox
+    Friend WithEvents chkKeepScreenOn As Windows.Forms.CheckBox
 End Class
