@@ -129,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Constants.vb" />
+    <Compile Include="KeepAlive.vb" />
     <Compile Include="Logging.vb" />
     <Compile Include="Misc.vb" />
     <Compile Include="EasyShell.vb" />
